# film_parser

./: Cargo.toml  Makefile  Readme.md
data/: film_info.txt  result_file.txt  result_wo_formating_file.txt
src/: film.pest  lib.rs  main.rs
test/: parser_tests.rs
tests/: parser_test.rs
