[package]
name = "film_parser"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A Rust application for parsing detailed film data from raw text, including information such as title, release year, director, screenwriter, cast, genre, and runtime, into a structured Film struct for easy data analysis and retrieval."

[dependencies]
anyhow = "1.0.92"
clippy = "0.0.302"
fmt = "0.1.0"
pest = "2.7.14"
pest_derive = "2.7.14"
colored = "2.1.0"
thiserror = "2.0.3"
